--- a/CameraDemo/app/src/main/res/layout/photo_layout.xml
+++ b/CameraDemo/app/src/main/res/layout/photo_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
-        android:background="@color/control_background"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         >
@@ -26,8 +24,8 @@
     <!-- this is surfaceview -->
     <com.example.camerademo.AutoFitTextureView
         android:id="@+id/surface_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/menu_top"
         />
 
@@ -38,13 +36,14 @@
         android:layout_alignParentStart="true"
         android:layout_width="match_parent"
         android:layout_height="112dp"
-        android:background="@color/control_background">
+        >
 
         <ImageButton
             android:id="@+id/photo_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:contentDescription="photo"
             android:background="@drawable/circle_photo"
             android:src="@drawable/ic_camera_black_48dp"
             />
@@ -53,7 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|start"
-            android:layout_marginLeft="40dp"
+            android:contentDescription="video"
+            android:layout_marginStart="40dp"
             android:background="@color/control_background"
             android:src="@drawable/ic_switch_video_white_36dp"
             />
