--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,13 @@
             android:layout_height="wrap_content"
             android:text="draw image"
             />
+
+        <Button
+            android:id="@+id/changefiter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="changefilter"
+            />
     </LinearLayout>
 
 </RelativeLayout>
